[gd_scene load_steps=7 format=3 uid="uid://g7nqrkb4tks"]

[ext_resource type="Script" path="res://scripts/platform.gd" id="1_kv74t"]
[ext_resource type="Texture2D" uid="uid://d00aubj2tay7j" path="res://ui_art/white_square.png" id="2_4a24c"]
[ext_resource type="Texture2D" uid="uid://i5qfstqifj56" path="res://ui_art/red_square.png" id="3_0r2dp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gby10"]
size = Vector2(508, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ul2gr"]
size = Vector2(512, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8r1u0"]
size = Vector2(512, 512)

[node name="Platform" type="StaticBody2D"]
disable_mode = 2
collision_layer = 16
collision_mask = 16
script = ExtResource("1_kv74t")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_gby10")
one_way_collision = true

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.592157, 0.00784314, 1)
scale = Vector2(1, 0.125)
texture = ExtResource("2_4a24c")

[node name="Illusion" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Illusion"]
position = Vector2(0, -44)
shape = SubResource("RectangleShape2D_ul2gr")
disabled = true

[node name="Spikes" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, -44)
scale = Vector2(0.9375, 0.046875)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spikes"]
position = Vector2(0, -6.10352e-05)
shape = SubResource("RectangleShape2D_8r1u0")
disabled = true

[node name="Spike" type="Sprite2D" parent="Spikes"]
unique_name_in_owner = true
modulate = Color(0.113725, 0.113725, 0.113725, 0.643137)
texture = ExtResource("2_4a24c")

[node name="Warning" type="Sprite2D" parent="Spikes"]
unique_name_in_owner = true
position = Vector2(0, 85.3333)
scale = Vector2(1, 0.666667)
texture = ExtResource("3_0r2dp")

[connection signal="body_entered" from="Illusion" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Illusion" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Spikes" to="." method="_on_spikes_body_entered"]
